# application-services

./: CHANGELOG.md  CONFIGURING_CLION.md  Cargo.toml
.github/: pull_request_template.md
build-scripts/: rebuild_libs.rs
clobber_mechanism/: Cargo.toml
components/fxa-client/src/: device.rs  lib.rs  send_tab.rs
components/logins/src/: db.rs  update_plan.rs
components/remerge/src/storage/: db.rs
libs/: .gitignore  .local_libs_version  version_log
