[package]
name = "clobber_mechanism"
version = "0.1.0"
authors = ["Hannah <computernerd510@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
assert_fs = "1.0.0"
tempdir = "0.3.7"
tempfile = "3.1.0"

